feat: add main components

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,3 +1,10 @@
 .header {
-  display: block;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+
+  &__logo {
+    line-height: 0;
+  }
 }
