--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -8,6 +8,7 @@
   --c-grayish-violet: hsl(257, 7%, 63%);
   --c-very-dark-blue: hsl(255, 11%, 22%);
   --c-very-dark-violet: hsl(260, 8%, 14%);
+  --c-white: #fff;
 }
 
 // Breakpoints
