feat: update btn styles

--- a/src/styles/components/_button.css
+++ b/src/styles/components/_button.css
@@ -1,7 +1,10 @@
 .btn {
   background-color: var(--c-cyan);
+  border: none;
   border-radius: 30px;
   color: var(--c-white);
+  cursor: pointer;
+  font-weight: 700;
   padding: 20px;
   text-align: center;
   text-decoration: none;
