--- a/src/components/MainMenu/MainMenu.module.scss
+++ b/src/components/MainMenu/MainMenu.module.scss
@@ -17,6 +17,7 @@
     padding: 20px;
     position: absolute;
     right: 0;
+    z-index: 100;
   }
 
   &__item {
@@ -24,12 +25,6 @@
     padding: 15px 0;
     text-align: center;
     text-decoration: none;
-    transition: color 0.3s, transform 0.3s;
     width: 100%;
-
-    &:hover {
-      color: var(--c-grayish-violet);
-      transform: scale(1.05);
-    }
   }
 }
