feat: shorten, input, advanced statistics styes

--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -1,3 +1,10 @@
 .input {
-  display: block;
+  border: none;
+  border-radius: 7px;
+  color: var(--c-gray);
+  padding: 15px;
+
+  &::placeholder {
+    color: var(--c-gray);
+  }
 }
