--- a/src/components/ShortenForm/ShortenForm.module.scss
+++ b/src/components/ShortenForm/ShortenForm.module.scss
@@ -1,3 +1,16 @@
 .shorten-form {
-  display: block;
+  background-color: var(--c-dark-violet);
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: 65%;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto 60px;
+  max-width: calc(90% - 60px);
+  padding: 30px;
+
+  &__input {
+    margin-bottom: 30px;
+  }
 }
