--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -8,7 +8,7 @@
 }
 
 .get-started {
-  margin: 0 auto;
+  margin: 0 auto 60px;
   max-width: 90%;
   text-align: center;
 
@@ -23,5 +23,20 @@
 
   &__btn {
     min-width: 220px;
+  }
+}
+
+.advanced-statistics {
+  margin: 0 auto 60px;
+  max-width: 90%;
+  text-align: center;
+
+  &__title {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+
+  &__description {
+    color: var(--c-grayish-violet);
   }
 }
