--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -4,6 +4,7 @@
   --c-cyan: hsl(180, 66%, 49%);
   --c-dark-violet: hsl(257, 27%, 26%);
   --c-red: hsl(0, 87%, 67%);
+  --c-gray-violet: hsl(225, 33.3%, 95.3%);
   --c-gray: hsl(0, 0%, 75%);
   --c-grayish-violet: hsl(257, 7%, 63%);
   --c-very-dark-blue: hsl(255, 11%, 22%);
