--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,3 +1,26 @@
 .footer {
-  padding: 20px;
+  &__first-section {
+    align-items: center;
+    background-color: var(--c-dark-violet);
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 100px 25px 80px;
+
+    &-title {
+      font-size: 1.5em;
+      margin: 0 0 30px;
+    }
+
+    &-btn {
+      min-width: 200px;
+    }
+  }
+
+  &__second-section {
+    padding: 25px;
+  }
 }
