feat: footer second section and footer links styles

--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -21,6 +21,17 @@
   }
 
   &__second-section {
-    padding: 25px;
+    align-items: center;
+    background-color: var(--c-very-dark-blue);
+    display: flex;
+    flex-direction: column;
+    padding: 55px 25px 25px;
+
+    &-logo {
+      display: block;
+      line-height: 0;
+      margin-bottom: 60px;
+      min-width: 155px;
+    }
   }
 }
