--- a/src/components/LinksList/LinksList.module.scss
+++ b/src/components/LinksList/LinksList.module.scss
@@ -1,3 +1,24 @@
 .links-list {
-  display: block;
+  text-align: center;
+
+  &:not(&:last-child) {
+    margin-bottom: 40px;
+  }
+
+  &__title {
+    color: var(--c-white);
+    margin: 0 0 25px;
+  }
+
+  &__items {
+    line-height: 2;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__link {
+    color: var(--c-gray);
+    text-decoration: none;
+  }
 }
