feat: social links styles

--- a/src/components/SocialLinks/SocialLinks.module.scss
+++ b/src/components/SocialLinks/SocialLinks.module.scss
@@ -1,3 +1,11 @@
 .social-links {
-  display: block;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  min-width: 240px;
+}
+
+.social-link {
+  line-height: 0;
+  min-width: 30px;
 }
