--- a/src/components/AuthMenu/AuthMenu.module.scss
+++ b/src/components/AuthMenu/AuthMenu.module.scss
@@ -4,11 +4,14 @@
     border-top: 1px solid var(--c-grayish-violet);
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
+    padding-top: 20px;
     width: 100%;
   }
 
   &__item {
     color: var(--c-gray);
+    margin-bottom: 15px;
     padding: 10px 0;
     text-align: center;
     text-decoration: white;
@@ -16,9 +19,6 @@
   }
 
   &__btn {
-    color: var(--c-white);
-    display: inline-block;
-    text-decoration: none;
-    width: 100%;
+    width: calc(100% - 40px);
   }
 }
