--- a/src/pages/Features/Features.module.scss
+++ b/src/pages/Features/Features.module.scss
@@ -1,3 +1,15 @@
 .features {
-  display: block;
+  margin: 0 auto 60px;
+  max-width: 90%;
+  text-align: center;
+
+  &__title {
+    font-size: 2em;
+    margin-bottom: 20px;
+  }
+
+  &__description {
+    color: var(--c-grayish-violet);
+    line-height: 1.8;
+  }
 }
