feat: add auth feature

--- a/src/components/MainMenu/MainMenu.module.scss
+++ b/src/components/MainMenu/MainMenu.module.scss
@@ -23,6 +23,7 @@
 
   &__item {
     color: var(--c-gray);
+    cursor: pointer;
     padding: 15px 0;
     text-align: center;
     text-decoration: none;
